Fix z-index issue

--- a/components/web-marker/src/components/app.component.scss
+++ b/components/web-marker/src/components/app.component.scss
@@ -1,7 +1,7 @@
 :host {
-    z-index: 9999 !important;
+    z-index: 99999999 !important;
 }
 
 lobby-container {
-    
+
 }
