--- a/components/web-marker/src/components/pop-up/account-overview/account-overview.component.scss
+++ b/components/web-marker/src/components/pop-up/account-overview/account-overview.component.scss
@@ -1,7 +1,7 @@
 @import "../../../variables.scss";
 
 :host {
-  z-index: 9999 !important;
+  z-index: 99999999 !important;
   position: fixed;
   top: 5px;
   right: 5px;
