--- a/components/web-marker/src/components/pop-up/lobby-container/app.component.scss
+++ b/components/web-marker/src/components/pop-up/lobby-container/app.component.scss
@@ -2,7 +2,7 @@
 
 
 :host {
-  z-index: 9999 !important;
+  z-index: 99999999 !important;
   position: fixed;
   top: 5px;
   right: 5px;
